EFA Version 3.0.0.9 Changes
############################################################

Issue #39   Enhancement  - Add link for Webmin in MailWatch
Issue #96   Enhancement  - Reconfigure to permit regular yum updates
Issue #135  Enhancement  - Lots of legit mails blocked on SpamAssassin KAM_BODY_URIBL_PCCC
Issue #148  Enhancement  - Allow message view from quarantine reports directly
Issue #176  Enhancement  - Add quarantine cleanup options to EFA-Configure
Issue #179  Enhancement  - Get webinterface to work with https by default
Issue #190  Enhancement  - EFA-Init link test
Issue #191  Enhancement  - Redirect postfix notifications from postmaster to postmaster email
Issue #192  Enhancement  - EFA Update Now option
Issue #193  Enhancement  - Removed rpmforge from yum, added EFA repo
Issue #194  Bug          - mtalog is empty
Issue #195  Bug          - Update EFA hostname in MySQL
Issue #197  Enhancement  - Update EFA-Backup for Unbound
Issue #199  Bug          - quarantine_report.php issues
Issue #200  Bug          - unrar binary not extracting rar files in MailScanner
Issue #203  Bug          - Fix Notify Senders sed replace issue in 3.0.0.8
Issue #204  Bug          - UTF8 Characters Not Rendering in MailWatch
Issue #211  Bug          - MS_LOGO missing
Issue #219  Bug          - Trailing spaces in subjects in MailScanner trigger duplicate subjects in header

############################################################
EFA Version 3.0.0.8 Changes
############################################################

Issue #40  Enhancement  - Extend MailWatch to hide high spam from regular users
Issue #45  Enhancement  - Add ScamNailer ClamAV ruleset (superceded by issue #172)
Issue #49  Enhancement  - Add max spam check size to EFA-Configure
Issue #72  Enhancement  - EFA MSRE Support
Issue #132 Enhancement  - Increase sa-learn and spamassassin max message size limits
Issue #150 Bug          - Replace dnsmasq with unbound (URIBL_BLOCKED using dnsmasq)