@@ -41,7 +41,7 @@ MAILWATCHVERSION="20f37a1ecb"
 IMAGECEBERUSVERSION="1.1"
 SPAMASSASSINVERSION="3.4.0a"
 PYZORVERSION="0.7.0"
-WEBMINVERSION="1.690-1"
+WEBMINVERSION="1.770-1"
 #----------------------------------------------------------------#
 
 #----------------------------------------------------------------#
@@ -158,6 +158,11 @@ EOF
   if [[ -z $CHECKEXCLUDE ]]; then
     echo "exclude=$yumexclude" >> /etc/yum.conf
   fi
+  
+  # Issue #162 Upgrade Webmin
+  # Pulled from EFA Repo during yum update
+  # Just call update-webmin to cleanup modules
+  update-webmin
 
   echo "$VERSION update is complete"
   echo ""
@@ -263,7 +268,6 @@ function update-mailwatch() {
       # Issue #39 Add link for Webmin in MailWatch
       sed -i "/^    echo '<li><a href=\"mailgraph.php\">/a\    \$hostname = gethostname\(\);\n    echo '<li><a href=\"https://' \. \$hostname \. ':10000\">Webmin</a>';" other.php
 
-
       # Cleanup
       rm -rf /usr/src/EFA/1.2.0-master
 
@@ -314,6 +318,38 @@ function update-vmtools() {
 
     chkconfig vmtoolsd on
     service vmtoolsd start
+  fi
+}
+#----------------------------------------------------------------#
+
+#----------------------------------------------------------------#
+# Function to update Webmin
+#----------------------------------------------------------------#
+function update-webmin() {
+  if [[ $WEBMINVERSION != "`grep WEBMINVERSION /etc/EFA-Config | sed 's/^.*://'`" && "`rpm -q webmin`" == "webmin-$WEBMINVERSION.noarch" ]]; then
+    # shoot a hole in webmin so we can change settings
+    echo "localauth=/usr/sbin/lsof" >> /etc/webmin/miniserv.conf
+    echo "referer=1" >> /etc/webmin/config
+    echo "referers=" >> /etc/webmin.config
+    sed -i '/^referers_none=1/ c\referers_none=0' /etc/webmin/config
+    service webmin restart
+
+    # Remove modules we don't need.
+    curl -k "https://localhost:10000/webmin/delete_mod.cgi?mod=adsl-client&mod=bacula-backup&mod=burner&mod=pserver&mod=cluster-copy&mod=exim&mod=shorewall6&mod=sendmail&confirm=Delete&acls=1&nodeps="
+    curl -k "https://localhost:10000/webmin/delete_mod.cgi?mod=cluster-webmin&mod=bandwidth&mod=cluster-passwd&mod=cluster-cron&mod=cluster-shell&mod=cluster-usermin&mod=cluster-useradmin&confirm=Delete&acls=1&nodeps="
+    curl -k "https://localhost:10000/webmin/delete_mod.cgi?mod=cfengine&mod=dhcpd&mod=dovecot&mod=fetchmail&mod=filter&mod=frox&mod=tunnel&mod=heartbeat&mod=ipsec&mod=jabber&mod=krb5&confirm=Delete&acls=1&nodeps="
+    curl -k "https://localhost:10000/webmin/delete_mod.cgi?mod=ldap-client&mod=ldap-server&mod=ldap-useradmin&mod=firewall&mod=mon&mod=majordomo&mod=exports&mod=openslp&mod=pap&mod=ppp-client&mod=pptp-client&mod=pptp-server&mod=postgresql&confirm=Delete&acls=1&nodeps="
+    curl -k "https://localhost:10000/webmin/delete_mod.cgi?mod=lpadmin&mod=proftpd&mod=procmail&mod=qmailadmin&mod=smart-status&mod=samba&mod=shorewall&mod=sarg&mod=squid&mod=usermin&mod=vgetty&mod=wuftpd&mod=webalizer&confirm=Delete&acls=1&nodeps="
+
+    # fix the holes again
+    sed -i '/^referers_none=0/ c\referers_none=1' /etc/webmin/config
+    sed -i '/referer=1/d' /etc/webmin/config
+    sed -i '/referers=/d' /etc/webmin/config
+    sed -i '/localauth=\/usr\/sbin\/lsof/d' /etc/webmin/miniserv.conf
+    service webmin restart
+
+    # Update version to EFA-Config
+    sed -i "/^WEBMINVERSION:/ c\WEBMINVERSION:$WEBMINVERSION" /etc/EFA-Config
   fi
 }
 #----------------------------------------------------------------#
